--- a/crypto/crypto_app/templates/home.html
+++ b/crypto/crypto_app/templates/home.html
@@ -1,15 +1,25 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Hello World</h1>
-
-    
-
-    <ul>
+    <div class="container">
+        <div class="row">
         {% for x in api.Data %}
-            <li>{{ x.title }}</li>
+        <div class="col-sm">
+            <div class="card" style="width: 18rem;">
+            <img src="{{ x.imageurl }}" class="card-img-top" alt="{{ x.source }}">
+            <div class="card-body">
+                <h5 class="card-title">{{ x.title }}</h5>
+                <p class="card-text">{{ x.body }}</p>
+                <a href="{{ x.url }}" class="btn btn-secondary">Read More</a>
+            </div>
+            </div>
+            <br/>
+            </div>
         {% endfor %}
-    </ul>
+        </div>
+    </div>
+
+
 
     {{api.Data}}
 
