error handlings completed

--- a/crypto/crypto_app/templates/prices.html
+++ b/crypto/crypto_app/templates/prices.html
@@ -1,5 +1,25 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    Hello World
+    {% if notfound %}
+        <form class="form-inline my-2 my-lg-0" method="POST" action="{% url 'prices' %}">
+            {% csrf_token %}
+            <input class="form-control mr-sm-2" type="search" placeholder="BTC, XRP, etc..." aria-label="Search" name="quote">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Get Price</button>
+        </form>
+    {% else %}
+        {% if crypto.Response %}
+            Sorry, {{ quote }} symbol doesn't exist
+        {% endif %}
+        {% for key, value in crypto.DISPLAY.items %}
+            <div class="jumbotron">
+                <h1 class="display-4">{{ key }}</h1>
+                <strong>Name</strong>: {{ key }}<br/>
+                <strong>Price</strong>: {{ value.CAD.PRICE }}<br/>
+                <strong>Day High</strong>: {{ value.CAD.HIGHDAY }}<br/>
+                <strong>Day Low</strong>: {{ value.CAD.LOWDAY }}<br/>
+                <strong>Market Cap</strong>: {{ value.CAD.MKTCAP }}<br/>
+            </div>
+        {% endfor %}
+    {% endif %}
 {% endblock %}
