--- a/crypto/crypto_app/templates/base.html
+++ b/crypto/crypto_app/templates/base.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">My Crypto Dashboard</a>
+  <a class="navbar-brand" href="{% url 'home' %}">My Crypto Dashboard</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
