--- a/crypto/crypto_app/templates/home.html
+++ b/crypto/crypto_app/templates/home.html
@@ -6,7 +6,11 @@
   <h1 class="display-4">Crypto Dashboard</h1>
   <p class="lead">Price, News, Reddit, Twitter and more!</p>
   <hr class="my-4">
-  <a class="btn btn-secondary btn-lg" href="#" role="button">Learn more</a>
+    <form class="form-inline my-2 my-lg-0" method="POST" action="{% url 'prices' %}">
+        {% csrf_token %}
+      <input class="form-control mr-sm-2" type="search" placeholder="BTC, XRP, etc..." aria-label="Search" name="quote">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Get Price</button>
+    </form>
 </div>
 <br/>
 <table class="table table-bordered table-hover">
@@ -54,9 +58,5 @@
         {% endfor %}
         </div> 
     </div>
-
-
-
-    {{api.Data}}
 
 {% endblock %}
